--- a/app/src/manifest.yml
+++ b/app/src/manifest.yml
@@ -8,7 +8,7 @@ version:
 
 #artifacts that are distributed from this version of the package
 artifacts:
-  setup_script: setup.sql
+  setup_script: scripts/setup.sql
   default_streamlit: app_instance_schema.streamlit
   extension_code: true
 
@@ -34,3 +34,12 @@ references:
       object_type: Table 
       multi_valued: false 
       register_callback: app_instance_schema.update_reference
+  - shipping_table:
+      label: "Shipping Table"
+      description: "Select data"
+      privileges:
+        - SELECT
+      object_type: Table
+      multi_valued: false
+      register_callback: app_instance_schema.update_reference
+
